fix: hide top zappers header on mobile

--- a/src/element/live-chat.css
+++ b/src/element/live-chat.css
@@ -165,6 +165,12 @@
   font-weight: 600;
 }
 
+@media (max-width: 768px) {
+  .top-zappers h3 {
+    display: none;
+  }
+}
+
 .top-zappers-container {
   display: flex;
   overflow-y: scroll;
